# XRHS

./: .gitignore  install.sh  install_arch.sh  t.sh  update.sh
Dependencies/AHRS_core/src/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  topLevelManager.cpp  topLevelManager.hpp
Dependencies/AHRS_core/src/model/controllers/ui/: uiController.hpp
Dependencies/AHRS_core/src/model/hardware/cameras/: _cam.hpp  camEnum.cpp  cameraManager.cpp  cmake_install.cmake
Dependencies/AHRS_core/src/model/hardware/hw/: cmake_install.cmake
Dependencies/AHRS_core/src/model/hardware/ihidapi/: cmake_install.cmake
Dependencies/AHRS_core/src/model/hardware/psvr/: _psvr.hpp  cmake_install.cmake
Dependencies/AHRS_core/src/model/patterns/commands/: cmake_install.cmake  commands.hpp
Dependencies/AHRS_core/src/model/patterns/observer/: cmake_install.cmake
Dependencies/AHRS_core/src/model/perfcheckers/: cmake_install.cmake
Dependencies/AHRS_core/src/model/windows/: cmake_install.cmake
Dependencies/AHRS_core/src/pipeline/: cmake_install.cmake  pipeline.cpp
Dependencies/AHRS_core/src/pipeline/abstract/: pipelineNode.cpp  pipelineNode.hpp
Dependencies/AHRS_core/src/pipeline/members/: uiDrawerNode.hpp  uiMergerNode.hpp  videoCaptureNode.hpp
Dependencies/AHRS_core/src/pluginManagement/: CMakeLists.txt  Plugin.hpp  cmake_install.cmake
Dependencies/AHRS_core/src/processing/zbar/: cmake_install.cmake
Dependencies/AHRS_core/src/threadweaver/: cmake_install.cmake  debugging.hpp
Dependencies/AHRS_core/src/ui/: cmake_install.cmake
Dependencies/AHRS_core/src/ui/support/: UiSupport.hpp  cmake_install.cmake
Dependencies/KronUI/src/: CMakeCache.txt  CMakeLists.txt  KronUI  Makefile  cmake_install.cmake  main.cpp  main.cpp.OLD  topLevelInclude.hpp
Dependencies/KronUI/src/Bases/: CMakeLists.txt  Makefile  ReflectiveItem.hpp  cmake_install.cmake
Dependencies/KronUI/src/Freetype/: CMakeLists.txt  Makefile  TrueTypeManager.cpp  TrueTypeManager.hpp  cmake_install.cmake
Dependencies/KronUI/src/KronUIGL/: CMakeLists.txt  KronUIGL.hpp  Makefile  cmake_install.cmake
Dependencies/KronUI/src/KronUIGL/3D/: CMakeLists.txt  Makefile  cmake_install.cmake
Dependencies/KronUI/src/KronUIGL/3D/Elements/: CMakeLists.txt  Makefile  cmake_install.cmake  entity.cpp  entity.hpp  light.hpp  mesh.cpp  mesh.hpp  texture.hpp  transform.cpp  transform.hpp  vertex.cpp  vertex.hpp  world.cpp  world.hpp
Dependencies/KronUI/src/KronUIGL/3D/Intersector/: CMakeLists.txt  Intersector.cpp  Intersector.hpp  Makefile
Dependencies/KronUI/src/KronUIGL/3D/Kinematics/: CMakeLists.txt  KinematicJoints.cpp  KinematicJoints.hpp  KinematicsProcessor.cpp  KinematicsProcessor.hpp  Makefile  Skeleton.cpp  Skeleton.hpp
Dependencies/KronUI/src/KronUIGL/3D/Loaders/: CMakeLists.txt  Makefile  OBJLoader.cpp  OBJLoader.hpp  cmake_install.cmake
Dependencies/KronUI/src/KronUIGL/3D/Renderers/: CMakeLists.txt  Makefile  MeshRenderer.cpp  MeshRenderer.hpp  cmake_install.cmake
Dependencies/KronUI/src/KronUIGL/Geometry/: CMakeLists.txt  Drawing.cpp  Drawing.hpp  GeometryRenderer.cpp  GeometryRenderer.hpp  Makefile  Shapes.cpp  Shapes.hpp  cmake_install.cmake
Dependencies/KronUI/src/KronUIGL/Input/: CMakeLists.txt  Input.cpp  Input.hpp  Makefile  cmake_install.cmake
Dependencies/KronUI/src/KronUIGL/Paints/: CMakeLists.txt  Makefile  Paints.hpp  cmake_install.cmake
Dependencies/KronUI/src/KronUIGL/Shaders/: CMakeLists.txt  Makefile  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  cmake_install.cmake
Dependencies/KronUI/src/KronUIGL/Text/: CMakeLists.txt  Makefile  TextRenderer.cpp  TextRenderer.hpp  cmake_install.cmake
Dependencies/KronUI/src/KronUIGL/Window/: CMakeLists.txt  KronUIWindow.cpp  KronUIWindow.hpp  Makefile  cmake_install.cmake
Dependencies/KronUI/src/shaders/: background.fs  background.vs  cube.fs  cube.vs  geom.fs  geom.vs  surface.fs  surface.vs  text.fs
Utilities/: a.out  (+1 more)
src/: CMakeCache.txt  CMakeLists.txt  Glue.hpp  KronUI  Makefile  cmake_install.cmake  main.cpp
src/ARHS/: Makefile  cmake_install.cmake
src/ARHS/graphics/: Makefile  cmake_install.cmake
src/ARHS/model/controllers/: Makefile  cmake_install.cmake
src/ARHS/model/hardware/cameras/: Makefile  cmake_install.cmake
src/ARHS/model/hardware/hw/: Makefile  cmake_install.cmake
src/ARHS/model/hardware/ihidapi/: Makefile  cmake_install.cmake
src/ARHS/model/hardware/psvr/: Makefile  cmake_install.cmake
src/ARHS/model/patterns/commands/: Makefile  cmake_install.cmake
src/ARHS/model/patterns/observer/: Makefile  cmake_install.cmake
src/ARHS/model/perfcheckers/: Makefile  cmake_install.cmake
src/ARHS/model/windows/: Makefile  cmake_install.cmake
src/ARHS/pipeline/: Makefile  cmake_install.cmake
src/ARHS/pluginManagement/: Makefile  cmake_install.cmake
src/ARHS/processing/zbar/: Makefile  cmake_install.cmake
src/ARHS/threadweaver/: Makefile  cmake_install.cmake
src/ARHS/ui/support/: Makefile  cmake_install.cmake
src/Bases/: Makefile  cmake_install.cmake
src/Freetype/: Makefile  cmake_install.cmake
src/KronUIGL/: Makefile  cmake_install.cmake
src/KronUIGL/3D/: Makefile  cmake_install.cmake
src/KronUIGL/3D/Elements/: Makefile  cmake_install.cmake
src/KronUIGL/3D/Intersector/: Makefile  cmake_install.cmake
src/KronUIGL/3D/Kinematics/: Makefile  cmake_install.cmake
src/KronUIGL/3D/Loaders/: Makefile  cmake_install.cmake
src/KronUIGL/3D/Renderers/: Makefile  cmake_install.cmake
src/KronUIGL/3D/Surfaces/: Makefile  cmake_install.cmake
src/KronUIGL/3D/Vision/: Makefile  cmake_install.cmake
src/KronUIGL/Geometry/: Makefile  cmake_install.cmake
src/KronUIGL/Input/: Makefile  cmake_install.cmake
src/KronUIGL/Paints/: Makefile  cmake_install.cmake
src/KronUIGL/Shaders/: Makefile  cmake_install.cmake
src/KronUIGL/Text/: Makefile  cmake_install.cmake
src/KronUIGL/Window/: Makefile  cmake_install.cmake
src/Ressources/Models/laptop/: Lowpoly_Notebook_2.mtl
src/shaders/: background.fs  background.vs  cube.fs  cube.vs  debug.fs  geom.fs  surface.fs  surface.vs  text.vs
(+2475 files in other folders)
